<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">offerSRkh</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Category</string>
    <string name="title_notifications">Notifications</string>

    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <!--                         original admob ads id                           -->
    <!--        <string name="banner">ca-app-pub-1407332185822881/1116667246</string>-->
    <!--        <string name="interstitial">ca-app-pub-1407332185822881/6029054906</string>-->
    <!--                         original admob ads id                           -->
    <string name="play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="developer_name">offerSRkh</string>
    <string name="email">contact@offersrkh.com</string>

    <string name="privacy_policy_url">https://offersrkh.com/app-info/privacy-policy.html</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="new_release">New Release</string>
    <string name="offersrkh_com">offerSRkh.com</string>
    <string name="category1">Category</string>
    <string name="all_offers">All Offers</string>
    <string name="recent_offers">Recent Offers</string>
    <string name="something_went_wrong">something_went_wrong</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="contact_us">Contact Us</string>
    <string name="report_error">Report Error</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="official_website">Official Website</string>
    <string name="share_app">Share App</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_url">https://offersrkh.com/app-info/disclaimer.html</string>
    <string name="featured">Featured</string>
    <string name="category">Category</string>
    <string name="populer">Populer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>