<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item

        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_trending_news"
        android:icon="@drawable/trending"

        android:title="Popular" />

    <item

        android:id="@+id/navigation_info"
        android:icon="@drawable/menu"
        android:title="Menu" />



    <item

        android:id="@+id/navigation_search"
        android:icon="@drawable/featured_icon"
        android:title="@string/featured" />


    <item

        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/category_icon"
        android:title="@string/category" />


</menu>