<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fm"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"

      >

        <LinearLayout
            android:layout_marginTop="?android:attr/actionBarSize"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="30dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/offer" />

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@mipmap/ic_launcher_round"
                    android:visibility="gone" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version_1_0_0" />

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foregroundTint="@android:color/darker_gray"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/website_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@android:color/darker_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/website"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/official_website"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@android:color/darker_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/contact_us"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/contact_us"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/disclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@android:color/darker_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/info"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/disclaimer"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foregroundTint="@android:color/darker_gray"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/privacy_Policy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@android:color/darker_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/lock"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/privacy_policy"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
               android:visibility="gone"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foregroundTint="@android:color/darker_gray"

                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/about_L"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@android:color/darker_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/info"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/about"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foregroundTint="@android:color/darker_gray"

                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@android:color/darker_gray"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/star"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="12dp"
                        android:text="@string/rate_us"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foregroundTint="@android:color/darker_gray"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/share_APP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@android:color/darker_gray"

                    android:orientation="horizontal">

                    <ImageView
                        android:padding="3dp"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/share"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="Share App"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/report_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:src="@drawable/report"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/report_error"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>